crates/graphql-schema-validation/tests/validation_errors/objects_nonempty.errors.txt
  × Syntax error:  --> 1:13
  │   |
  │ 1 | type Empty {}
  │   |             ^---
  │   |
  │   = expected field_definition
